Try to fix the wrong display of the menu icon on Safari... In some hours I'll see if it works. TODO: image sourceset, language switch

--- a/style.css
+++ b/style.css
@@ -183,20 +183,25 @@ nav .menu ul li a:hover{
 
 .slide {
     opacity: 0;
+    -webkit-transform: translateX(-40px);
+    -moz-transform: translateX(-40px);
+    -ms-transform: translateX(-40px);
+    -o-transform: translateX(-40px);
     transform: translateX(-40px);
+
     -webkit-transition: all 0.6s ease-out;
-         -moz-transition: all 0.6s ease-out;
-            -ms-transition: all 0.6s ease-out;
-             -o-transition: all 0.6s ease-out;
-                    transition: all 0.6s ease-out;
+    -moz-transition: all 0.6s ease-out;
+    -ms-transition: all 0.6s ease-out;
+    -o-transition: all 0.6s ease-out;
+    transition: all 0.6s ease-out;
 }
 .slide.visible {
     opacity: 1;
     -webkit-transform: none;
-         -moz-transform: none;
-            -ms-transform: none;
-             -o-transform: none;
-                    transform: none;
+    -moz-transform: none;
+    -ms-transform: none;
+    -o-transform: none;
+    transform: none;
 }
 
 .presentation section{
@@ -541,12 +546,17 @@ figure picture img{
     justify-content: center;
 }
 .item-thumbnail{
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
     transform: scale(1);
-    transition: .5s cubic-bezier(.23,1,.32,1);
+    
     -webkit-transition: .5s cubic-bezier(.23,1,.32,1);
     -moz-transition: .5s cubic-bezier(.23,1,.32,1);
     -ms-transition: .5s cubic-bezier(.23,1,.32,1);
     -o-transition: .5s cubic-bezier(.23,1,.32,1);
+    transition: .5s cubic-bezier(.23,1,.32,1);
 }
 .item-thumbnail picture img{
     object-fit:contain;
@@ -575,11 +585,12 @@ figure picture img{
     bottom: 0;
     z-index: -1;
     opacity: 0.8;
-    transition: .5s cubic-bezier(.23,1,.32,1);
+    
     -webkit-transition: .5s cubic-bezier(.23,1,.32,1);
     -moz-transition: .5s cubic-bezier(.23,1,.32,1);
     -ms-transition: .5s cubic-bezier(.23,1,.32,1);
     -o-transition: .5s cubic-bezier(.23,1,.32,1);
+    transition: .5s cubic-bezier(.23,1,.32,1);
 }
 .item-info h4 {
     font-size: 40px;
@@ -589,19 +600,25 @@ figure picture img{
     position: relative;
     opacity: 0;
     visibility: hidden;
-    transform: scale(.8);
+    
     -webkit-transform: scale(.8);
     -moz-transform: scale(.8);
     -ms-transform: scale(.8);
     -o-transform: scale(.8);
-    transition: .3s cubic-bezier(.23,1,.32,1);
+    transform: scale(.8);
+    
     -webkit-transition: .3s cubic-bezier(.23,1,.32,1);
     -moz-transition: .3s cubic-bezier(.23,1,.32,1);
     -ms-transition: .3s cubic-bezier(.23,1,.32,1);
     -o-transition: .3s cubic-bezier(.23,1,.32,1);
+    transition: .3s cubic-bezier(.23,1,.32,1);
 }
 
 .item:hover .item-thumbnail{
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
     transform: scale(1.2);
 }
 .item:hover .item-info span{
@@ -615,16 +632,21 @@ figure picture img{
 .item:hover .item-info{
     opacity: 1;
     visibility: visible;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
     transform: scale(1);
 }
 .item:hover .item-info h4{
     opacity: 1;
     visibility: visible;
-    transform: scale(1);
+    
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
     -ms-transform: scale(1);
     -o-transform: scale(1);
+    transform: scale(1);
 }
 .item:hover .item-info::after {
     height: 100%;
@@ -985,7 +1007,11 @@ footer ul li a svg{
 
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity 0.5s ease;
+    -webkit-transition: opacity 0.5s ease;
+    -moz-transition: opacity 0.5s ease;
+    -ms-transition: opacity 0.5s ease;
+    -o-transition: opacity 0.5s ease;
+    transition: opacity 0.5s ease;
 }
 
 .fade-enter-from,
@@ -1129,8 +1155,12 @@ footer ul li a svg{
     .gallery-container .item .item-info h4{
         opacity: 1;
         visibility: visible;
-        transform: scale(1);
         -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+        transform: scale(1);
+        
         margin: 1.5rem 0;
         color: white;
         text-shadow: 2px 2px 2px black;
@@ -1293,6 +1323,7 @@ footer ul li a svg{
         -o-transition: transform 0.6s ease;
         -webkit-transition: transform 0.6s ease;
         -moz-transition: transform 0.6s ease;
+        -ms-transition: transform 0.6s ease;
         transition: transform 0.6s ease;
 
         display: block;
@@ -1329,13 +1360,16 @@ footer ul li a svg{
         -moz-transform: rotateZ(-55deg) rotateX(35deg) rotateY(35deg);
         transform: rotateZ(-55deg) rotateX(35deg) rotateY(35deg);
 
+        -webkit-transform-origin: bottom left;
         transform-origin: bottom left;
+        
         transform-style: preserve-3d;
         perspective-origin: top;
         
         -o-transition: all 0.6s ease;
         -webkit-transition: all 0.6s ease;
         -moz-transition: all 0.6s ease;
+        -ms-transition: all 0.6s ease;
         transition: all 0.6s ease;
     }
     .icon .O{
@@ -1351,6 +1385,7 @@ footer ul li a svg{
         -o-transition: all 0.6s ease;
         -webkit-transition: all 0.6s ease;
         -moz-transition: all 0.6s ease;
+        -ms-transition: all 0.6s ease;
         transition: all 0.6s ease;
         
         z-index: 0;
@@ -1369,6 +1404,7 @@ footer ul li a svg{
         -o-transition: all 0.6s ease;
         -webkit-transition: all 0.6s ease;
         -moz-transition: all 0.6s ease;
+        -ms-transition: all 0.6s ease;
         transition: all 0.6s ease;
         
         z-index: 1;
@@ -1386,6 +1422,10 @@ footer ul li a svg{
 
     .icon .O svg .dot{
         fill: black;
+        -o-transition: all 0.6s ease;
+        -webkit-transition: all 0.6s ease;
+        -moz-transition: all 0.6s ease;
+        -ms-transition: all 0.6s ease;
         transition: all 0.6s ease;
     }
     .icon .O svg,
